# skeleton

./: .gitattributes  README.md
apps/my-best-app/: app.ts  package.json  tsconfig.json
apps/my-best-app/src/: cli.ts  config.ts  env.ts  hello_world.ts
apps/vite-app/: app.tsx  index.html  package.json  tsconfig.json  vite.config.ts
apps/vite-app/src/: home.tsx
database/enums/: 100-enum-user-role.sql
database/migrations/20230520200500_users/: up.sql
database/schemas/gql/: file.graphql
env/vite-app/: .env  .env.local
www/website/: Cargo.toml  README  site.rs
www/website/src/controller/: auth.rs  message.rs
www/website/src/controller/dto/request/: user.rs
www/website/src/controller/dto/response/: message.rs  user.rs
www/website/src/error/: auth.rs  message.rs
www/website/src/model/entity/: message.rs  user.rs
www/website/src/model/repository/: message.rs  user.rs
www/website/src/routes/: mod.rs
www/website/src/template/: mod.rs
www/website/src/template/layout/: another.rs  default.rs
www/website/src/view/auth/: login.rs  register.rs
www/website/src/view/message/: edit.rs  index.rs  send.rs  show.rs
